# talk-202606-madrid

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  verification.md
app/: main_classic.cpp  main_modern.cpp
bench/: bench_expected.cpp  bench_soa.cpp
cmake/: CompilerWarnings.cmake  FetchDeps.cmake  toolchain-arm-none-eabi.cmake
demo01_shapes/classic/include/demo01/classic/: shapes.hpp
demo01_shapes/classic/src/: shapes.cpp
demo01_shapes/modern/include/demo01/modern/: shapes.hpp
demo01_shapes/modern/src/: shapes.cpp
demo01_shapes/test/: test_demo01_equivalence.cpp
demo02_concepts/classic/include/demo02/classic/: filters.hpp
demo02_concepts/classic/src/: filters.cpp
demo02_concepts/modern/include/demo02/modern/: filters.hpp
demo02_concepts/modern/src/: filters.cpp
demo02_concepts/test/: test_demo02_equivalence.cpp
demo03_soa/classic/include/demo03/classic/: particles.hpp  particles_ptr.hpp
demo03_soa/classic/src/: particles.cpp  particles_ptr.cpp
demo03_soa/modern/include/demo03/modern/: particles.hpp
demo03_soa/modern/src/: particles.cpp
demo03_soa/test/: test_demo03_equivalence.cpp
demo04_expected/classic/include/demo04/classic/: telemetry.hpp
demo04_expected/classic/src/: telemetry.cpp
demo04_expected/modern/include/demo04/modern/: telemetry.hpp
demo04_expected/modern/src/: telemetry.cpp
demo04_expected/test/: test_demo04_equivalence.cpp
demo05_compile_time/classic/include/demo05/classic/: crc32.hpp
demo05_compile_time/classic/src/: crc32.cpp
demo05_compile_time/modern/include/demo05/modern/: crc32.hpp
demo05_compile_time/modern/src/: crc32.cpp
demo05_compile_time/test/: test_demo05_equivalence.cpp
demo06_bitcast/classic/include/demo06/classic/: packet.hpp
demo06_bitcast/classic/src/: packet.cpp
demo06_bitcast/modern/include/demo06/modern/: packet.hpp
demo06_bitcast/modern/src/: packet.cpp
demo06_bitcast/test/: test_demo06_equivalence.cpp
demo07_ranges/classic/include/demo07/classic/: pipeline.hpp
demo07_ranges/classic/src/: pipeline.cpp
demo07_ranges/modern/include/demo07/modern/: pipeline.hpp
demo07_ranges/modern/src/: pipeline.cpp
demo07_ranges/test/: test_demo07_equivalence.cpp
demo08_stack/classic/include/demo08/classic/: event_log.hpp
demo08_stack/classic/src/: event_log.cpp
demo08_stack/modern/include/demo08/modern/: event_log.hpp
demo08_stack/modern/src/: event_log.cpp
demo08_stack/test/: test_demo08_equivalence.cpp
demo09_observers/classic/include/demo09/classic/: subject.hpp
demo09_observers/modern/include/demo09/modern/: subject.hpp
demo09_observers/test/: test_demo09_equivalence.cpp
linker/: MPS2_AN386.ld
scripts/: compare_size.sh  docker-build.sh  docker-run.sh  measure_demos.sh
slides/: SUBMODULE_INTEGRATION.md  talk.html  talk.org  verisure.css  verisure.scss
startup/: startup_mps2.cpp  syscalls.cpp
